fixed weathersum wrap properties

--- a/assignments/weathersite/styles/main.css
+++ b/assignments/weathersite/styles/main.css
@@ -87,16 +87,18 @@ main figure img { width: 100%; }
 
 
 .weatherSum  {
-	display:flex;
+	display:inline-flex;
+	flex-wrap: wrap;
 	border: 4px solid #11B9E0;
 	padding: 1em 1em 1em 1em;
+	text-align: justify;
 }
 .highlow {
 	padding: 1em 1em 1em 1em;
 }
 .forecast {
     display: none;
-	border:
+	
 }
 
 .windchill {
@@ -140,7 +142,7 @@ article p.town-article img {
 	width:100%;
 	height: 50%;
 	
-	display: inline-flex;
+	display: flex;
 	flex-wrap: wrap;
 }
 } 
@@ -293,7 +295,7 @@ p.thanks {
 #place {
 	align-content: space-around;
 }
-]
+
 
 
 
